# rigger

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: built-in-components.md  cli.md  concepts.md  getting-started.md  index.md
docs/api/: index.md
docs/guides/: custom-backend.md  workspace-management.md
src/rigger/: __init__.py  __main__.py  _config.py  _harness.py  _lock.py  _merge.py  _protocols.py  _provisioner.py  _registry.py  _schema.py  _types.py  cli.py  harness.schema.json
src/rigger/backends/: __init__.py  claude_code.py
src/rigger/constraints/: __init__.py  branch_policy.py  tool_allowlist.py
src/rigger/context_sources/: __init__.py  agents_md.py  file_tree.py  mcp_capability.py  static_files.py
src/rigger/entropy_detectors/: __init__.py  doc_staleness.py  shell_command.py
src/rigger/harbor/: __init__.py  agent.py  backend.py  task_source.py  verifier.py
src/rigger/state_stores/: __init__.py  harness_dir.py  json_file.py
src/rigger/task_sources/: __init__.py  atomic_issue.py  file_list.py  json_stories.py  linear.py
src/rigger/templates/: __init__.py
src/rigger/templates/gsd/: harness.yaml  tasks.json
src/rigger/templates/openai/: agents_template.md  harness.yaml  tasks.json
src/rigger/templates/openai/docs/: conventions.md  design.md
src/rigger/verifiers/: __init__.py  ci_status.py  lint.py  ratchet.py  test_suite.py
src/rigger/workspace/: __init__.py  git_worktree.py  independent.py  independent_branch.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_config.py  test_harness.py  test_lock.py  test_merge.py  test_protocols.py  test_provisioner.py  test_public_api.py  test_registry.py  test_schema.py  test_templates.py  test_types.py
tests/backends/: test_claude_code.py
tests/benchmark/swebench/: README.md
tests/constraints/: test_branch_policy.py  test_tool_allowlist.py
tests/context_sources/: test_agents_md.py  test_file_tree.py  test_mcp_capability.py  test_static_files.py
tests/declarative/: test_yaml_run.py  test_yaml_to_harness.py
tests/entropy_detectors/: test_doc_staleness.py  test_shell_command.py
tests/integration/: test_constraint_integration.py  test_context_source_integration.py  test_entropy_integration.py  test_harness_real_components.py  test_registry_integrity.py  test_task_source_integration.py  test_verifier_integration.py
tests/scenarios/: test_constrained_run.py  test_feature_driven.py  test_plan_driven.py
tests/smoke/: README.md  harness.yaml  tasks.json
tests/state_stores/: test_harness_dir.py  test_json_file.py
tests/task_sources/: __init__.py  test_atomic_issue.py  test_file_list.py  test_json_stories.py  test_linear.py
tests/verifiers/: test_ci_status.py  test_lint.py  test_ratchet.py  test_test_suite.py
tests/workspace/: test_git_worktree.py  test_independent.py  test_independent_branch.py
