[project]
name = "rigger"
version = "0.0.2"
description = "A declarative agent harness framework"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "Ariel Arevalo", email = "ariel@rigger.ai" }]
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.scripts]
rigger = "rigger.cli:main"

[project.urls]
Homepage = "https://rigger-ai.github.io/rigger/"
Documentation = "https://rigger-ai.github.io/rigger/"
Repository = "https://github.com/rigger-ai/rigger"
Issues = "https://github.com/rigger-ai/rigger/issues"
Changelog = "https://github.com/rigger-ai/rigger/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.8.7",
    "ty>=0.0.1a7",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]
harbor = [
    "harbor>=0.1.45",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "PT", "ANN", "S", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ANN", "S603", "S607", "PT019"]
"src/rigger/backends/**/*.py" = ["S603", "S607"]
"src/rigger/_registry.py" = ["ANN401"]
"src/rigger/_config.py" = ["ANN401"]
"src/rigger/constraints/**/*.py" = ["S603", "S607", "D107"]
"src/rigger/state_stores/**/*.py" = ["D107"]
"src/rigger/verifiers/**/*.py" = ["S603", "S607", "D107"]
"src/rigger/entropy_detectors/**/*.py" = ["S602", "S603", "S607", "D107"]
"src/rigger/workspace/**/*.py" = ["S603", "S607"]
"src/rigger/__main__.py" = ["D"]
"src/rigger/harbor/**/*.py" = ["S105", "S310", "S603", "S607", "D107"]

[tool.ruff.lint.isort]
known-first-party = ["rigger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
